Successfully added authentication

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,11 @@
   --color-bg-muted: 240 4.8% 95.9%;
   --color-text-muted-foreground: 240 3.8% 46.1%;
 
+
+--color-bg-gradient-from: #70B7F1/0%;
+--color-bg-gradient-to: #416A8B; 
+
+
 }
 
 html,
